--- a/BSphonealpha1.html
+++ b/BSphonealpha1.html
@@ -392,10 +392,10 @@ h1 {
 .rest-btn {
   border: none;
   border-radius: 0.375rem;
-  font-size: 1rem;
+  font-size: 1.25rem;
   padding: 0.375rem 0.75rem;
   margin: 0; /* ✅ remove margin to prevent double spacing */
-  color: #fff;
+  color: black;
   text-align: center;
   transition: transform 0.2s, background 0.2s;
 }
@@ -578,8 +578,9 @@ button:disabled {
   <!-- Page 2 -->
 
   <div id="page2" style="display:none;">
-    <button class="main-action" onclick="goBack()">Back to Input</button>
+    
     <div id="game-results"></div>
+    <button class="main-action" onclick="goBack()">Back to Input</button>
        <div class="round-navigation">
          <button id="prevBtn" onclick="prevRound()" disabled>Prev Round</button>
          <div id="roundTitle">R</div>
