Adjust main action button styles
Updated margin and width styles for main action button.

--- a/BSphonealpha1.html
+++ b/BSphonealpha1.html
@@ -228,14 +228,13 @@ h1 {
 
 .main-action {
   display: block;
-  width: 95%;
   background: orange;
   color: black;
   font-size: 1.25rem; /* 20px */
   font-weight: bold;
   padding: 0.5rem; /* 8px */
   border-radius: 0.9375rem; /* 15px */
-  margin-top: 0.5rem;
+  margin: 1.5rem;
   cursor: pointer;
   border: none;
   transition: background 0.3s, transform 0.2s;
