Change display property of main-action to flex

--- a/BSphonealpha1.html
+++ b/BSphonealpha1.html
@@ -227,7 +227,7 @@ h1 {
 }
 
 .main-action {
-  display: block;
+  display: flex;
   background: orange;
   color: black;
   font-size: 1.25rem; /* 20px */
