Fix display property in .main-action class
Changed display property from 'flex' to 'black' in .main-action class.

--- a/BSphonealpha1.html
+++ b/BSphonealpha1.html
@@ -227,7 +227,7 @@ h1 {
 }
 
 .main-action {
-  display: flex;
+  display: black;
   background: orange;
   color: black;
   font-size: 1.25rem; /* 20px */
