Fix display property and set width for main-action

--- a/BSphonealpha1.html
+++ b/BSphonealpha1.html
@@ -228,6 +228,7 @@ h1 {
 
 .main-action {
   display: black;
+  width: 90vw;
   background: orange;
   color: black;
   font-size: 1.25rem; /* 20px */
