Refactor showRound function for better clarity

--- a/BSphonealpha1.html
+++ b/BSphonealpha1.html
@@ -1671,6 +1671,45 @@ button:disabled {
     // Main round display
 
     function showRound(index) {
+  const resultsDiv = document.getElementById('game-results');
+  resultsDiv.innerHTML = '';
+
+  const data = allRounds[index];
+  if (!data) return;
+
+  // ✅ Update round title
+  const roundTitle = document.getElementById("roundTitle");
+  roundTitle.className = "round-title";
+  roundTitle.innerText = data.round;
+
+  // ✅ Create sections safely
+  let restDiv = null;
+  if (data.resting && data.resting.length !== 0) {
+    restDiv = renderRestingPlayers(data, index);
+  }
+
+  const gamesDiv = renderGames(data, index);
+
+  // ✅ Wrap everything in a container to distinguish latest vs played
+  const wrapper = document.createElement('div');
+  const isLatest = index === allRounds.length - 1;
+  wrapper.className = isLatest ? 'latest-round' : 'played-round';
+
+  // ✅ Append conditionally
+  if (restDiv) {
+    wrapper.append(restDiv, gamesDiv);
+  } else {
+    wrapper.append(gamesDiv);
+  }
+
+  resultsDiv.append(wrapper);
+
+  // ✅ Navigation buttons
+  document.getElementById('prevBtn').disabled = index === 0;
+  document.getElementById('nextBtn').disabled = false;
+}
+
+    function showRound3(index) {
       const resultsDiv = document.getElementById('game-results');
       resultsDiv.innerHTML = '';
 
