--- a/BSphonealpha1.html
+++ b/BSphonealpha1.html
@@ -298,7 +298,8 @@ h1 {
   display: flex;
   flex-direction: column;
   flex: 1;
-  background: blue;
+  background: yellow;
+  padding: 0.5rem
   min-width: 7.5rem; /* 120px */
 }
 
