--- a/BSphonealpha1.html
+++ b/BSphonealpha1.html
@@ -298,12 +298,12 @@ h1 {
   display: flex;
   flex-direction: column;
   flex: 1;
-  background: yellow;
-  padding: 1.5rem;
+  background: black;
+  padding: 1.5rem 0.25rem 0.25rem;
   min-width: 7.5rem;      /* 120px */
   border-radius: 0.5rem;
   cursor: grab;
-  gap: 0.75rem;
+  gap: 0.25rem;
   position: relative;     /* needed for the ::before handle positioning */
 }
 
