--- a/BSphonealpha1.html
+++ b/BSphonealpha1.html
@@ -1650,10 +1650,10 @@ function renderGames(data, index) {
       const teamLetter = getTeamLetter(gameIndex, teamSide);
 
       // Add circular text label
-      const teamLabel = document.createElement('div');
-      teamLabel.className = 'team-label';
-      teamLabel.innerText = teamLetter;
-      teamDiv.appendChild(teamLabel);
+      //const teamLabel = document.createElement('div');
+      //teamLabel.className = 'team-label';
+      //teamLabel.innerText = teamLetter;
+      //teamDiv.appendChild(teamLabel);
 
       // Add players
       const teamPairs = teamSide === 'L' ? game.pair1 : game.pair2;
