--- a/BSphonealpha1.html
+++ b/BSphonealpha1.html
@@ -1634,45 +1634,49 @@ function renderGames(data, index) {
     const teamsDiv = document.createElement('div');
     teamsDiv.className = 'teams';
 
-    // Helper → Team letters A, B, C, D...
+    // Helper → Team letters (A, B, C, D...)
     const getTeamLetter = (gameIndex, teamSide) => {
       const teamNumber = gameIndex * 2 + (teamSide === 'L' ? 0 : 1);
       return String.fromCharCode(65 + teamNumber);
     };
 
-    // Make a team container (L or R)
+    // Create a team block (L or R)
     const makeTeamDiv = (teamSide) => {
       const teamDiv = document.createElement('div');
       teamDiv.className = 'team';
       teamDiv.dataset.teamSide = teamSide;
       teamDiv.dataset.gameIndex = gameIndex;
 
-      const teamLetter = getTeamLetter(gameIndex, teamSide);
+      // ⭕ optional team label (hide if not needed)
+      // const teamLabel = document.createElement('div');
+      // teamLabel.className = 'team-label';
+      // teamLabel.innerText = getTeamLetter(gameIndex, teamSide);
+      // teamDiv.appendChild(teamLabel);
 
-      // Add circular text label
-      //const teamLabel = document.createElement('div');
-      //teamLabel.className = 'team-label';
-      //teamLabel.innerText = teamLetter;
-      //teamDiv.appendChild(teamLabel);
-
-      // Add players
+      // 🎾 Add players
       const teamPairs = teamSide === 'L' ? game.pair1 : game.pair2;
-      teamPairs.forEach((p, i) =>
-        teamDiv.appendChild(makePlayerButton(p, teamSide, gameIndex, i, data, index))
-      );
+      teamPairs.forEach((p, i) => {
+        teamDiv.appendChild(makePlayerButton(p, teamSide, gameIndex, i, data, index));
+      });
 
+      // 🟦 Only latest round is interactive
       const isLatestRound = index === allRounds.length - 1;
       if (isLatestRound) {
         teamDiv.addEventListener('click', (e) => {
+          // 🚫 Ignore if clicked on a player button
+          if (e.target.closest('.Lplayer-btn, .Rplayer-btn')) return;
+
           e.preventDefault();
 
+          // ✅ Team selection/swapping logic
           if (window.selectedTeam) {
             const src = window.selectedTeam;
             if (src.gameIndex !== gameIndex) {
               handleTeamSwapAcrossCourts(src, { teamSide, gameIndex }, data, index);
             }
             window.selectedTeam = null;
-            document.querySelectorAll('.selected-team').forEach(b => b.classList.remove('selected-team'));
+            document.querySelectorAll('.selected-team')
+              .forEach(b => b.classList.remove('selected-team'));
           } else {
             window.selectedTeam = { teamSide, gameIndex };
             teamDiv.classList.add('selected-team');
