--- a/BSphonealpha1.html
+++ b/BSphonealpha1.html
@@ -295,8 +295,14 @@ h1 {
 }
 
 
-
 .team {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  min-width: 7.5rem; /* 120px */
+}
+
+.teamold{
   display: flex;
   flex-direction: column;
   align-items: center;
