--- a/BSphonealpha1.html
+++ b/BSphonealpha1.html
@@ -275,7 +275,7 @@ h1 {
   flex-direction: column;
   align-items: center;
   gap: 0.75rem; /* 12px */
-  padding: 0.5rem; /* 8px */
+  padding: 0.25rem; /* 8px */
   background: linear-gradient(180deg, #3b0073 0%, #7d00b8 100%);
   min-height: 25vh;
   display: block;
@@ -306,7 +306,7 @@ h1 {
   display: flex;
   flex-direction: column;
   flex: 1;
-  background: black;
+  background:#C2DFFF ;
   padding: 1.5rem 0.25rem 0.25rem;
   min-width: 7.5rem; /* 120px */
   border-radius: 0.5rem;
@@ -358,7 +358,7 @@ h1 {
   border-top-right-radius: 0.5rem;
 }
 .vs-text {
-  font-size: 1.25rem; /* 20px */
+  font-size: 1rem; /* 20px */
   font-weight: bold;
   color: #3b0073;
   flex: 0 0 auto;
